[gd_scene load_steps=5 format=3 uid="uid://buyggyfeoik2l"]

[ext_resource type="Script" path="res://addons/hyh.digression/editor/controls/NodeSelectionControl.gd" id="1_bqk74"]
[ext_resource type="PackedScene" uid="uid://f44ru47mc3pp" path="res://addons/hyh.digression/editor/validation/ValidationWarning.tscn" id="2_ne3a0"]
[ext_resource type="Texture2D" uid="uid://dfvamw687u0qj" path="res://addons/hyh.digression/icons/icon_search.svg" id="3_hknfa"]
[ext_resource type="Texture2D" uid="uid://d65jtbo3b07t" path="res://addons/hyh.digression/icons/icon_clear.svg" id="4_5ksv2"]

[node name="NodeSelectionControl" type="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
script = ExtResource("1_bqk74")

[node name="SelectionName" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Select Node..."
editable = false
flat = true

[node name="ValidationWarning" parent="." instance=ExtResource("2_ne3a0")]
layout_mode = 2

[node name="SearchButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_hknfa")
flat = true

[node name="ClearButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("4_5ksv2")
flat = true

[connection signal="pressed" from="SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
